# magpie

./: .env.example  .gitignore  LICENSE  README.md  README.md~  environment.yml  magpie_flowchart.dia.autosave  pyproject.toml  requirements.txt
cli/: main.py
integrations/: llm_client.py
magpie/core/: #query_processor.py#  .#query_processor.py  input_manager.py  interactive_review.py  profile_manager.py  query_processor.py  reranker.py  synthesizer.py  vector_search.py
magpie/integrations/: embedder.py  llm_client.py  pdf_fetcher.py  zotero_client.py
magpie/models/: paper.py  profile.py  query.py  results.py
magpie/utils/: config.py
scripts/: populate_papers.py
tests/: models_tests.py  test_core.py  test_data.py  test_integrations.py  test_interactive_review.py  test_search.py
utils/: config.py
